--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@
 # This file lists all contributors to the repository.
 
 Sakhile Motha <sakhile.motha.254@gmail.com>
+Themba Radebe <Thembaradebe172@gmail.com>
